--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,6 +57,9 @@ td{
     overflow-x: auto !important;
     height: 550px;
 }
+.imgDiv{
+  padding: 9px 35px 0px 23px;
+}
 .mapDiv{
   position: relative;width: 100%;
   height: 500px;
@@ -67,6 +70,9 @@ td{
 .remove{
   margin-top: 5px;
   padding: 0px 8px !important;;
+}
+.divNews{
+  margin-bottom: 20px;
 }
 .sideMenu{
   position: fixed !important;
