--- a/public/css/app.css
+++ b/public/css/app.css
@@ -68,8 +68,14 @@ td{
   padding: 0px 5px !important;
 }
 .remove{
-  margin-top: 5px;
-  padding: 0px 8px !important;;
+  padding: 0px 8px !important;
+  color: black;
+  margin-bottom: 3px;
+  font-size: 23px;
+}
+.iclass{
+  color: black;
+  font-size: 23px;
 }
 .divNews{
   margin-bottom: 20px;
@@ -82,6 +88,12 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.astyle{
+  background: linear-gradient(180deg, rgba(252,217,0,1) 0%, rgba(251,196,0,1) 50%, rgba(250,174,0,1) 100%);
+  padding: 3px 16px !important;
+  font-size: 13px;
+  color: black !important;
 }
 .formDiv{
     padding: 20px 30px !important;
