--- a/public/css/app.css
+++ b/public/css/app.css
@@ -64,6 +64,17 @@ td{
   position: relative;width: 100%;
   height: 500px;
 }
+.addDay{
+  background: yellow;
+  color: black;
+  font-size: 34px;
+  padding: 0px 13px;
+  border-radius: 36px;
+  cursor: pointer;
+}
+#hiddenSaturdayForm{
+  display: none;
+}
 .a_edit{
   padding: 0px 5px !important;
 }
@@ -76,6 +87,7 @@ td{
 .iclass{
   color: black;
   font-size: 23px;
+  margin-top: 4px;
 }
 .divNews{
   margin-bottom: 20px;
